[gd_scene load_steps=13 format=3 uid="uid://c45k1cki2cdf0"]

[ext_resource type="Texture2D" uid="uid://b5nrx64xnlr2q" path="res://art/branding/SpS_elements-06.png" id="1_7bueb"]
[ext_resource type="Texture2D" uid="uid://058saqmbygkh" path="res://example_projects/animation_examples/assets/rounded_rect.png" id="2_h8pgy"]
[ext_resource type="Texture2D" uid="uid://cfui7dpx6iycw" path="res://art/branding/SpS_elements-07.png" id="3_j0lrv"]
[ext_resource type="Texture2D" uid="uid://dwv0q3fx03pf4" path="res://art/super_pixel/Super Pixel Sci-Fi UI - Mechapunk/window_theme/window_theme_violet/message_box_A.png" id="4_vldtf"]
[ext_resource type="Texture2D" uid="uid://dswe3ucc0txqp" path="res://savedata/save.png" id="5_c2ssl"]
[ext_resource type="Script" path="res://savedata/scene_loader.gd" id="6_fkcmt"]

[sub_resource type="Gradient" id="Gradient_pl01b"]
offsets = PackedFloat32Array(0, 0.233449, 0.756098, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.541176, 1, 1, 1, 0.627451, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bclh6"]
gradient = SubResource("Gradient_pl01b")

[sub_resource type="Curve" id="Curve_k5erq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.487421, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_agcpr"]
curve = SubResource("Curve_k5erq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8subu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 540, 1)
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, -15, 0)
scale_min = 0.1
scale_max = 0.25
scale_curve = SubResource("CurveTexture_agcpr")
color_ramp = SubResource("GradientTexture1D_bclh6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yki6v"]
texture = ExtResource("4_vldtf")
texture_margin_left = 40.0
texture_margin_top = 50.0
texture_margin_right = 40.0
texture_margin_bottom = 50.0

[node name="LoadSave" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7bueb")
expand_mode = 1

[node name="BackgroundParticles" type="GPUParticles2D" parent="."]
position = Vector2(628, 409)
amount = 31
process_material = SubResource("ParticleProcessMaterial_8subu")
texture = ExtResource("2_h8pgy")
lifetime = 4.5
randomness = 0.36

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_offset = Vector2(-17, -212)
repeat_size = Vector2(5000, 0)
autoscroll = Vector2(-25, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Parallax2D"]
position = Vector2(2111, 331)
scale = Vector2(1.43921, 0.433145)
texture = ExtResource("3_j0lrv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yki6v")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Choose a save slot"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Save 1"
icon = ExtResource("5_c2ssl")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save data text"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Button2" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Save 2"
icon = ExtResource("5_c2ssl")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Save data text"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Button3" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Save 3"
icon = ExtResource("5_c2ssl")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Save data text"

[node name="scene_loader" type="Node" parent="."]
script = ExtResource("6_fkcmt")

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer/Button" to="scene_loader" method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer2/Button2" to="scene_loader" method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer3/Button3" to="scene_loader" method="_on_button_3_pressed"]
